fix contrast ratio

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -18,7 +18,7 @@ $epfl-color: #ed1c24
     p
       text-align: justify
       margin: 10px 0 0 0
-      color: #888
+      color: #666
 
   img
     float: right
@@ -29,7 +29,7 @@ $epfl-color: #ed1c24
   h2
     font-size: 1.1em
     margin: 5px 0 5px 0
-    color: #111
+    color: #000
 
 .news-content
   .news-text
